--- a/android2/build.gradle
+++ b/android2/build.gradle
@@ -40,4 +40,9 @@ dependencies {
     compile 'com.google.dagger:dagger-android:2.11'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
 
+    compile 'com.github.bumptech.glide:glide:4.1.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
+    compile 'org.greenrobot:eventbus:3.0.0'
+
+
 }
