--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ allprojects {
         mavenCentral()
         jcenter()
         maven { url "https://jitpack.io" }
+        maven { url 'https://maven.google.com' }
     }
 }
 
