--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     compile 'com.android.support:support-v4:26.+'
     testCompile 'junit:junit:4.12'
     compile project(':app2')
+    compile project(':domain')
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
 }
