--- a/app2/build.gradle
+++ b/app2/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:4.1.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.blankj:utilcode:1.13.5'
 }
