--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,15 +35,16 @@
             android:label="@string/title_activity_login" />
         <activity android:name=".register.RegisterActivity" />
         <activity android:name=".register.submitcode.SubmitCodeActivity" />
-        <activity android:name=".register.submitaccount.SubmitAccountInfoActivity"></activity>
+        <activity android:name=".register.submitaccount.SubmitAccountInfoActivity" />
 
         <service
             android:name=".MusicService"
             android:exported="true" />
 
-        <activity android:name=".Rank.RankActivity"
-            android:launchMode="singleTask"
-            ></activity>
+        <activity
+            android:name=".Rank.RankActivity"
+            android:launchMode="singleTask" />
+        <activity android:name=".fullscreen.FullScreenActivity"></activity>
     </application>
 
 </manifest>
